--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: Tests
 on:
   push:
-    branches: [main]
+    branches: [main-ci]
   pull_request:
     branches: [master]
     types: [opened, reopened, updated, synchronize]
