--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,8 +28,4 @@ jobs:
         with:
           toolchain: stable
       - uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: --release --all-features
-      - name: Run tests
-        run: yarn test
+        run: rustup default stable && rustup toolchain list && anchor test  --provider.cluster localnet
